--- a/index.html
+++ b/index.html
@@ -1,30 +1,96 @@
 
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أهنئك بعيد الفطر المبارك</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>عيد فطر سعيد</title>
+  <style>
+    body {
+      font-family: 'Cairo', sans-serif;
+      background: linear-gradient(120deg, #f9d29d, #ffd6d6);
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      direction: rtl;
+    }
+    .container {
+      padding: 40px 20px;
+    }
+    h1 {
+      color: #d6336c;
+      font-size: 2.5em;
+    }
+    p {
+      font-size: 1.5em;
+      color: #333;
+    }
+    .name {
+      font-weight: bold;
+      color: #2b2b2b;
+    }
+    .share-buttons {
+      margin-top: 30px;
+    }
+    .share-buttons a {
+      display: inline-block;
+      margin: 0 10px;
+      padding: 10px 20px;
+      background-color: #25d366;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .share-buttons a.fb {
+      background-color: #4267B2;
+    }
+    .ad-banner {
+      margin: 30px auto;
+      width: 90%;
+      height: 90px;
+      background-color: #eee;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #999;
+      font-size: 14px;
+      border: 2px dashed #ccc;
+    }
+  </style>
 </head>
 <body>
-    <div class="card">
-        <h1>عيد فطر سعيد!</h1>
-        <p>أهنئك بعيد الفطر المبارك يا <span id="username">صديقي</span>، أعاده الله عليك بالخير واليمن والبركات.</p>
-        <img src="assets/eid.png" alt="عيد فطر سعيد">
-        <div class="buttons">
-            <a id="whatsapp" href="#" target="_blank">شارك التهنئة على واتساب</a>
-            <a id="facebook" href="#" target="_blank">شارك التهنئة على فيسبوك</a>
-        </div>
+  <div class="container">
+    <h1>أهنئك بعيد الفطر المبارك</h1>
+    <p>عيد فطر سعيد عليك وعلى أسرتك يا <span class="name" id="username">صديقي</span>!</p>
+    
+    <div class="ad-banner">
+      مساحة إعلان (CPA أو AdSense)
     </div>
-    <script>
-        const params = new URLSearchParams(window.location.search);
-        const name = params.get("name");
-        if(name) {
-            document.getElementById("username").innerText = name;
-            document.getElementById("whatsapp").href = "https://wa.me/?text=" + encodeURIComponent("عيد فطر سعيد عليك وعلى أسرتك يا " + name + " 🌙✨ https://your-link");
-            document.getElementById("facebook").href = "https://www.facebook.com/sharer/sharer.php?u=https://your-link";
-        }
-    </script>
+
+    <div class="share-buttons">
+      <a href="#" onclick="shareWhatsApp()">شارك على واتساب</a>
+      <a href="#" class="fb" onclick="shareFacebook()">شارك على فيسبوك</a>
+    </div>
+  </div>
+
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const name = urlParams.get("name");
+    if(name) {
+      document.getElementById("username").textContent = decodeURIComponent(name);
+    }
+
+    function shareWhatsApp() {
+      const currentUrl = window.location.href;
+      const shareText = "أرسل لك هذه التهنئة الجميلة بمناسبة عيد الفطر المبارك! " + currentUrl;
+      window.open("https://wa.me/?text=" + encodeURIComponent(shareText), "_blank");
+    }
+
+    function shareFacebook() {
+      const currentUrl = window.location.href;
+      window.open("https://www.facebook.com/sharer/sharer.php?u=" + encodeURIComponent(currentUrl), "_blank");
+    }
+  </script>
 </body>
 </html>
